# mediaplayer

./: .gitignore  README.md  android.jks  build.gradle  build.gradle.kts  gradle.properties  keystore.properties  pubspec.yaml  settings.gradle  settings.gradle.kts
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/profile/: AndroidManifest.xml
app/: CMakeLists.txt  build.gradle  build.gradle.kts  lint-baseline.xml  proguard-rules.pro
app/libs/include/libavfilter/: avfilter.h
app/libs/include/libavformat/: avformat.h
app/libs/include/libavutil/: mem.h
app/src/androidTest/java/cc/imorning/mediaplayer/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/imorning/mediaplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/cc/imorning/mediaplayer/: IMusicPlayerManager.aidl  IMusicPlayerService.aidl  IMusicStateListener.aidl
app/src/main/cpp/: ffmpegutils.cpp  main.cpp  videoplayer.cpp
app/src/main/cpp/include/: AudioDevice.h  FFmpegAudioPlay.h  audio_player.h  json_batchallocator.h  json_internalarray.inl  json_internalmap.inl  json_tool.h  log.h  play_audio.h  play_video.h  video_play.h
app/src/main/cpp/include/SDL2/: SDL_assert.h  SDL_atomic.h  SDL_config.h  SDL_config_iphoneos.h  SDL_config_macosx.h  SDL_config_psp.h  SDL_error.h  SDL_events.h  SDL_filesystem.h  SDL_gesture.h  SDL_keyboard.h  SDL_locale.h  SDL_log.h  SDL_messagebox.h  SDL_mouse.h  SDL_mutex.h  SDL_opengl.h  SDL_opengl_glext.h  SDL_opengles.h  SDL_platform.h  SDL_scancode.h  SDL_sensor.h  SDL_shape.h  SDL_system.h  SDL_test_assert.h  SDL_test_common.h  SDL_test_crc32.h  SDL_test_md5.h  SDL_thread.h  SDL_timer.h  SDL_touch.h  SDL_version.h  SDL_video.h  SDL_vulkan.h
app/src/main/cpp/include/json/: reader.h  value.h
app/src/main/cpp/include/libavcodec/: avcodec.h  avfft.h
app/src/main/cpp/include/libavformat/: avformat.h  avio.h
app/src/main/cpp/include/libavutil/: avutil.h  bprint.h  bswap.h  cast5.h  channel_layout.h  common.h  cpu.h  frame.h  hwcontext_d3d11va.h  intreadwrite.h  log.h  opt.h  pixfmt.h  ripemd.h  sha512.h
app/src/main/cpp/include/libpostproc/: postprocess.h
app/src/main/cpp/include/libsdl/: SDL.h  SDL_audio.h  SDL_bits.h  SDL_blendmode.h  SDL_clipboard.h  SDL_cpuinfo.h  SDL_endian.h  SDL_gamecontroller.h  SDL_haptic.h  SDL_hints.h  SDL_joystick.h  SDL_keycode.h  SDL_loadso.h  SDL_main.h  SDL_metal.h  SDL_misc.h  SDL_opengl.h  SDL_opengles2.h  SDL_pixels.h  SDL_power.h  SDL_rect.h  SDL_render.h  SDL_rwops.h  SDL_stdinc.h  SDL_surface.h  SDL_syswm.h  SDL_test.h  SDL_test_compare.h  SDL_test_font.h  SDL_test_fuzzer.h  SDL_test_harness.h  SDL_test_images.h  SDL_test_log.h  SDL_test_memory.h  SDL_test_random.h  begin_code.h
app/src/main/cpp/include/libyuv/: compare_row.h  convert.h  convert_argb.h  convert_from_argb.h  cpu_id.h  planar_functions.h  rotate.h  rotate_row.h  row.h  scale.h  scale_row.h
app/src/main/cpp/player/audio/: AudioDevice.c  FFmpegAudioPlay.c  audio_player.cpp  play_audio.cpp
app/src/main/cpp/player/video/: play_video.cpp  video_play.cpp
app/src/main/cpp/utils/: log.cpp  media_info.cpp
app/src/main/cpp/utils/jsoncpp/: json_reader.cpp  json_value.cpp  json_writer.cpp
app/src/main/cpp/yuv/: yuvutils.cpp
app/src/main/java/cc/imorning/mediaplayer/: MediaPlayerApplication.kt
app/src/main/java/cc/imorning/mediaplayer/activity/: BaseActivity.java  BaseActivity.kt  MainActivity.java  MusicListActivity.kt  MusicPlayActivity.kt
app/src/main/java/cc/imorning/mediaplayer/activity/ui/component/: LyricsUI.kt
app/src/main/java/cc/imorning/mediaplayer/activity/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/cc/imorning/mediaplayer/data/: MusicApi.kt  MusicItem.kt
app/src/main/java/cc/imorning/mediaplayer/player/audio/: AudioPlayer.java  AudioPlayer.kt
app/src/main/java/cc/imorning/mediaplayer/service/: MusicPlayService.kt
app/src/main/java/cc/imorning/mediaplayer/utils/: LogUtils.kt  TimeUtils.kt
app/src/main/java/cc/imorning/mediaplayer/utils/list/: MusicHelper.kt  MusicList.kt
app/src/main/java/cc/imorning/mediaplayer/utils/ui/: NotificationHelper.kt  ToastUtils.kt
app/src/main/java/cc/imorning/mediaplayer/viewmodel/: MusicListViewModel.kt  MusicPlayViewModel.kt
app/src/main/java/com/imorning/mediaplayer/: MediaPlayerApplication.java
app/src/main/java/com/imorning/mediaplayer/activity/: BaseActivity.java  BaseActivity.kt  MainActivity.java  VideoPlayerActivity.java
app/src/main/java/com/imorning/mediaplayer/player/: Player.java
app/src/main/java/com/imorning/mediaplayer/player/audio/: AudioPlayer.java
app/src/main/java/com/imorning/mediaplayer/player/video/: VideoPlayer.java
app/src/main/java/com/imorning/mediaplayer/utils/: Jni.java  JniUtils.java  PermissionUtils.java  Player.java  YuvUtils.java
app/src/main/java/com/imorning/mediaplayer/utils/common/: LogUtils.kt
app/src/main/java/com/imorning/mediaplayer/utils/ui/: LogUtils.kt  ToastUtils.kt
app/src/main/java/com/imorning/mediaplayer/view/: FVideoView.java
app/src/main/java/org/libsdl/app/: HIDDevice.java  HIDDeviceBLESteamController.java  HIDDeviceManager.java  HIDDeviceUSB.java  SDL.java  SDLActivity.java  SDLAudioManager.java  SDLControllerManager.java
app/src/main/res/layout/: activity_main.xml  activity_video_player.xml  notification_music_playing.xml
app/src/main/res/menu/: activity_video_menu.xml
app/src/main/res/values/: dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cc/imorning/mediaplayer/: ExampleUnitTest.java  ParseTest.kt
app/src/test/java/com/imorning/mediaplayer/: ExampleUnitTest.java
common/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
music/: build.gradle
network/: build.gradle.kts
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+20 files in other folders)
